Thumbnail single column on mobile and fixed footer height

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -113,7 +113,7 @@
   }
 
   .masonry-sizer, .thumbnail {
-    @apply w-[calc(50%-8px)] lg:w-[calc(33.3333333333%-10.6666666667px)] xl:w-[calc(25%-12px)];
+    @apply w-full sm:w-[calc(50%-8px)] lg:w-[calc(33.3333333333%-10.6666666667px)] xl:w-[calc(25%-12px)];
   }
 
   .gutter-sizer {
@@ -133,11 +133,11 @@
   }
 
   .project-meta {
-    @apply absolute pointer-events-none bg-ink-800 py-3 px-4 z-20 top-0 left-0 rounded-full w-fit flex gap-2;
+    @apply invisible md:visible absolute pointer-events-none bg-white dark:bg-ink-800 py-3 px-4 z-20 top-0 left-0 rounded-full w-fit flex gap-2;
   }
 
   .project-meta > p {
-    @apply text-sm leading-tight inline text-paper;
+    @apply text-sm leading-tight inline text-black dark:text-paper;
   }
 
   .project-meta > .project-title {
